Update android/platform/libcore/ojluni/src/main/java/java/time/chrono
#J2ObjC_Android13_JRE_Upgrade_2022

PiperOrigin-RevId: 485194299